used background image for hero image to stop overlap peaking out from bottom

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,13 @@ body {
 
 .page-content {
     background-color: aliceblue;
+    padding: 1% 20%;
+    margin: 1% 0%;
+    font-size: 1.5rem;
+}
+
+.text-content {
+
 }
 
 
@@ -15,6 +22,11 @@ body {
     font-size: 2rem;
     position: relative;
     width: 100%;
+    background-image: radial-gradient(circle, rgba(0,0,0,0.7), transparent), url("/assets/adi-goldstein-EUsVwEOsblE-unsplash-cropped1.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 50vh;
 }
 
 .header-container img {
@@ -25,7 +37,7 @@ body {
 
 .header-container h1, .header-container h2 {
     position: absolute;
-    top: 45%;
+    top: 35%;
     left: 50%;
     z-index: 2;
     transform: translate(-50%, -50%);
@@ -34,17 +46,7 @@ body {
 }
 
 .header-container h2 {
-    top: 55%;
-}
-
-.header-container::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-    background: radial-gradient(circle, rgba(0,0,0,0.6), transparent);
+    top: 50%;
 }
 
 /* Nav-bar styles */
